# zenux

./: .gitignore  .ignore  README.md  index.html  pyproject.toml  tmuxp-session.yaml
back/: Cargo.toml
back/src/: conf.rs  core.rs  lib.rs  main.rs  urls.rs
backend/: Cargo.toml  saras.toml
backend/src/: main.rs
front/js/core/: core.js  home.js
front/style/core/: core.css  home.css
front/templates/core/: home.html  index.html
manage/: app-srv.sh  build.sh  bundle_css.py  bundle_css_conf.py  bundle_js.py  conf_bundle_js.py  deploy.sh  front_deps.txt  minify.sh  run.sh  static-srv.sh  sync_deps.sh  watcher.sh  ws_watcher_conf.py
manage/stuff/: deno_minify.sh  swc_minify.js
