[package]
name = "zenux_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zenux"
path = "src/main.rs"

[dependencies]
futures-lite = "1"
#async-net = "1.6"
#libc = "*"
#toml = "*"
#regex = "*"
#ansi_term = "*"
#tinyjson = "*"
#bincode = "1.3"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#rkyv = "*"
#bytecheck = "*"
urlmatch = {git = "https://github.com/SergeiMinaev/urlmatch"}
saras = {git = "https://github.com/SergeiMinaev/saras.rs"}

